Improve expertises and services text Add runner tool

--- a/expertises.html
+++ b/expertises.html
@@ -11,7 +11,7 @@ class: partenariats
 
                     </div>
                     <div class="col-md-8 home-content">
-                                    <h1 class="title">Cloud experts</h1>
+                                    <h1 class="title">DevOps &Cloud experts</h1>
             <p class="home-text">
                       Nos consultants sont certifiés sur les plateformes Cloud public et privé. Wescale investi en
                         continue dans la formation des wewes.
