--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ class: home
         <div class="row">
           <div class="col-md-8 home-content">
             <p class="up-title"><strong>IT</strong> as a service</p>
-            <h1 class="title">Cloud experts</h1>
+            <h1 class="title">DevOps & Cloud experts</h1>
             <p class="home-text">
 
               <strong>Notre métier</strong> : supprimer les contraintes entre vos développements et la livraison de
