--- a/services.html
+++ b/services.html
@@ -13,6 +13,11 @@ class: services
                 </div>
             </div>
             <div class="row">
+                <div class="col-md-6 schema-container">
+
+                    <img class="schema2" src="{{"/images/schema2.png"|relative_url}}" alt="Les 3 étapes du service Wescale"/>
+
+                </div>
                 <div class="col-md-6">
                     <h2>Identifier</h2>
 
@@ -31,6 +36,8 @@ class: services
                         plate-forme de Cloud choisie :</p>
                     <ul>
                         <li>cloud public, privé ou hybride</li>
+                        <li>automatisation de l'infrastructure et du déploiement</li>
+                        <li>elasticité des plateformes</li>
                     </ul>
 
                     <h2>Migrer</h2>
@@ -44,11 +51,6 @@ class: services
                         <li>run des services dans le Cloud</li>
                         <li>évangélisation</li>
                     </ul>
-
-                </div>
-                <div class="col-md-6 schema-container">
-
-                    <img class="schema2" src="{{"/images/schema2.png"|relative_url}}" alt="Les 3 étapes du service Wescale"/>
 
                 </div>
             </div>
