Remove alliance Move maps on top of footer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ class: home
               Dans ce cadre, les avancées technologiques du Cloud sont de puissants facilitateurs.<br/>
 
               Nous accompagnons des entreprises comme la vôtre dans l'optimisation de leurs solutions, grâce au <strong>Cloud</strong>.<br/>
-              Nous réalisons la transformation de ces solutions, au regard des enjeux métier.
+              Nous réalisons la transformation de ces solutions, au regard des enjeux métiers.
             </p>
 
             <p class="more">
