--- a/a-propos.html
+++ b/a-propos.html
@@ -16,7 +16,7 @@ class: a-propos
             <div class="row">
                 <div class="col-md-8">
                     <p>
-                        Tout a commencé avec quelques passionnés, qui se sont rendus à l’évidence :<br/>
+                        Tout a commencé avec quelques passionnés qui se sont rendus à l’évidence :<br/>
                         Il faut des gens talentueux à
                         l’imagination foisonnante pour créer les infrastructures cloud de demain.
                     </p>
@@ -32,31 +32,15 @@ class: a-propos
                         nous travaillons à nourrir la culture DevOps.
                     </p>
                     <p>
-                        On retrouve, chez chacun de nous, des traits de personnalité communs. Ouvert et partageur, les
-                        scalers
-                        sont passionnés par ce qu’il font. Ils cherchent toujours à améliorer les choses. Ils aiment
+                        Vous retrouverez chez chacun de nous des traits de personnalité communs. Ouverts et partageurs
+                        , les scalers
+                        sont passionnés par ce qu’ils font. Ils cherchent toujours à améliorer les choses. Ils aiment
                         aussi bien
-                        sûr se rafraîchir en partageant des verres. Les scalers contribuent à l’évolution et au bien
-                        être des
-                        autres. Pour finir, les scalers n’hésitent jamais à donner leur avis et ce quel qu’il soit.
+                        sûr se rafraîchir en partageant des verres. Les scalers contribuent à l’évolution et au
+                        bien-être des autres. Pour finir, les scalers n’hésitent jamais à donner leur avis et ce quel
+                        qu’il soit.
                     </p>
 
-
-                    <!--
-                    <h2 class="subtitle">L'IT as a Service</h2>
-
-                    <p>Les entreprises ont besoin de plus de réactivité de la part de leur IT.<br/>WeScale propose de les accompagner vers le Cloud, afin de répondre à l'exigence du monde informatique d'aujourd'hui : l'IT as a Service.</p>
-
-                    <h3>Notre promesse</h3>
-
-                    <p>Notre métier : vous aider à tirer le meilleur parti des avancées technologiques du Cloud.<br/>Nous accompagnons des entreprises comme la vôtre à optimiser leurs solutions, grâce au Cloud. <br/>Nous réalisons la transformation de ces solutions, aux regards des enjeux métier.</p>
-
-                    <p class="more">
-                      <a href="/services.html">
-                        <img src="{{"/images/more-black.png"| relative_url }}" alt="Ce que nous faisons" width="52" height="44"><br>
-                        Ce que nous faisons
-                      </a>
-                    </p>-->
                 </div>
                 <div class="col-md-4 valeurs">
                     <h2>Nos valeurs</h2>
