Refactor launch page to be more readable and build a better story telling

--- a/index.html
+++ b/index.html
@@ -6,42 +6,81 @@ class: home
     <section class="home-top">
       <div class="container">
         <div class="row">
-          <div class="col-md-8 home-content">
-            <h1 class="title">DevOps & Cloud experts</h1>
+          <div class="col-md-12 home-content">
+            <h1 class="title">Experts Cloud et DevOps</h1>
+            <h2 class="home-text">
+              Nous construisons les infrastructures et services Cloud de demain.
+            </h2>
+<!--
+            <h2>Notre mission</h2>
             <p class="home-text">
-
-              <strong>Notre métier</strong> : supprimer les contraintes entre vos développements et la livraison de
-              valeur à vos utilisateurs. C’est l’objet de l’approche <strong>DevOps</strong>.<br/>
-
-              Dans ce cadre, les avancées technologiques du Cloud sont de puissants facilitateurs.<br/>
-
-              Nous accompagnons des entreprises comme la vôtre dans l'optimisation de leurs solutions, grâce au <strong>Cloud</strong>.<br/>
-              Nous réalisons la transformation de ces solutions, au regard des enjeux métiers.
+              Aider les entreprises a considérer leur serveurs comme un troupeau de bétail que l’on doit abattre
+              régulièrement pour favoriser l’évolution du cheptel.
             </p>
+
+            <h1 class="title">DevOps est notre culture</h1>
+            <p class="home-text">
+             Nous construisons les solutions avec et pour nos clients. Notre objectif est de <b>collaborer</b>, c’est
+              pourquoi nous travaillons à nourrir la culture <b>DevOps</b>.
+              Nous sommes les <b>Ops</b> de <b>DevOps</b>
+            </p>
+
+            <h2>Notre valeure ajoutée</h2>
+            <p>
+              Le continuous delivery n'est pas réservé aux élites du GAFA, tout le monde peut l'atteindre.
+              C'est pourquoi nous travaillons à supprimer les contraintes entre les développements et la livraison de
+              valeur à vos utilisateurs.
+            </p>
+-->
 
             <p class="more">
               <a href="#" id="ce-que-nous-faisons">
                 <img src="{{"/images/more.png" | relative_url }}" alt="Ce que nous faisons" width="52" height="44" /><br/>
-                Ce que nous faisons
+                En savoir plus
               </a>
             </p>
 
-            <hr/>
-
-            <div class="techtrends">
+          </div>
+          <div class="col-md-4">
+            <h3>Notre promesse</h3>
+            <p>
+              Le <b>continuous delivery</b> n'est pas réservé aux <b>GAFA</b>, tout le monde peut l'atteindre !
+              C'est pourquoi nous travaillons à <b>supprimer</b> les <b>contraintes</b> entre les <b>développements</b>
+              et la <b>livraison de valeur</b> à vos utilisateurs.
+            </p>
+          </div>
+          <div class="col-md-4">
+            <h3>DevOps est notre culture</h3>
+            <p>
+              Nous construisons les solutions avec et pour nos clients. Notre objectif est de <b>collaborer</b>, c’est
+              pourquoi nous travaillons à nourrir la culture <b>DevOps</b>.
+              Nous sommes les <b>Ops</b> de <b>DevOps</b>
+            </p>
+          </div>
+          <div class="col-md-4">
+            <h3>Le Cloud est notre outils</h3>
+              <p>
+                Nos consultants sont <b>certifiés</b> sur les plateformes <b>Cloud public</b> (AWS, Google, Azure) et
+                <b>Cloud privé</b> (OpenStack). Wescale investi en continue dans la formation des scalers.
+              </p>
+          </div>
+<!--            <div class="techtrends">
               <div class="techtrends-image">
                 <a id="tt-link" href="#"  data-toggle="modal" data-target="#myModal"><img src="{{"/images/techtrends-cloud.png"| relative_url }}" alt="Techtrends Cloud" /></a>
               </div>
               <div class="techtrends-text">
                 <h2>Techtrends Cloud</h2>
-                <p>Dans le paysage IT actuel, le Cloud Computing est omniprésent. Cependant, même si son adoption progresse au sein des entreprises, la migration de tout ou partie d’un parc applicatif reste bien souvent complexe. Les acteurs de cet écosystème sont de plus en plus nombreux et les offres se multiplient en conséquence. Les décideurs sont confrontés à des choix stratégiques et technologiques difficiles.</p>
+                <p>Dans le paysage IT actuel, le Cloud Computing est omniprésent. Cependant, même si son adoption
+                  progresse au sein des entreprises, la migration de tout ou partie d’un parc applicatif reste bien
+                  souvent complexe. Les acteurs de cet écosystème sont de plus en plus nombreux et les offres se
+                  multiplient en conséquence. Les décideurs sont confrontés à des choix stratégiques et technologiques
+                  difficiles.</p>
                 <p class="news-readmore"><a href="#" data-toggle="modal" data-target="#myModal">Télécharger</a></p>
               </div>
 
               {% include tt-form.html %}
-            </div>
-          </div>
-          <div id="home-news" class="col-md-4 home-news">
+            </div> -->
+         <!-- <div id="home-news" class="col-md-4 home-news">
             <h1>
               <i class="fa fa-newspaper-o" aria-hidden="true"></i> Blog Wescale
             </h1>
@@ -49,7 +88,7 @@ class: home
               <i class="fa fa-refresh fa-spin  fa-fw" aria-hidden="true"></i>
             </h1>
 
-          </div>
+          </div>-->
         </div>
       </div>
     </section>
