Fix outils to outil

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ class: home
             </p>
           </div>
           <div class="col-md-4">
-            <h3>Le Cloud est notre outils</h3>
+            <h3>Le Cloud est notre outil</h3>
               <p>
                 Nos consultants sont <b>certifiés</b> sur les plateformes <b>Cloud public</b> (AWS, Google, Azure) et
                 <b>Cloud privé</b> (OpenStack). Wescale investit en continu dans la formation des scalers.
