Fix map and legend display for mobile

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ class: home
                 <div class="illustration"><img src="{{"/images/oeil.png"| relative_url }}" alt="01_Identifier" width="88" height="51" /></div>
                 <div>
                   <h2>Identifier</h2>
-                  <p>Nous proposons l’étude du SI de l'entreprise, pour définir les meilleurs axes d'améliorations.</p>
+                  <p>Nous réalisons l’étude du SI de l'entreprise, pour définir les meilleurs axes d'améliorations.</p>
                   <p class="news-readmore"><a href="{{"/services.html"| relative_url }}">En savoir plus</a></p>
                 </div>
               </div>
