--- a/index.html
+++ b/index.html
@@ -11,27 +11,6 @@ class: home
             <h2 class="home-text">
               Nous construisons des infrastructures et des services Cloud de qualité.
             </h2>
-<!--
-            <h2>Notre mission</h2>
-            <p class="home-text">
-              Aider les entreprises a considérer leur serveurs comme un troupeau de bétail que l’on doit abattre
-              régulièrement pour favoriser l’évolution du cheptel.
-            </p>
-
-            <h1 class="title">DevOps est notre culture</h1>
-            <p class="home-text">
-             Nous construisons les solutions avec et pour nos clients. Notre objectif est de <b>collaborer</b>, c’est
-              pourquoi nous travaillons à nourrir la culture <b>DevOps</b>.
-              Nous sommes les <b>Ops</b> de <b>DevOps</b>
-            </p>
-
-            <h2>Notre valeure ajoutée</h2>
-            <p>
-              Le continuous delivery n'est pas réservé aux élites du GAFA, tout le monde peut l'atteindre.
-              C'est pourquoi nous travaillons à supprimer les contraintes entre les développements et la livraison de
-              valeur à vos utilisateurs.
-            </p>
--->
 
             <p class="more">
               <a href="#" id="ce-que-nous-faisons">
@@ -70,7 +49,7 @@ class: home
     </section>
 
 
-    <div class="content">
+    <div class="content" style="padding-top: 0px">
       <section class="home-techtrends">
          <div class="container">
           <div class="row">
@@ -190,23 +169,57 @@ class: home
               <!--<p class="subtitle">Nous accompagnons les projets de nombreux clients grands comptes institutionnels, industriels ou du monde bancaire.</p>-->
 
               <div class="partenaires">
-                <img src="{{"/images/references/partenaire_01.jpg"| relative_url }}" alt=""  width="150px" />
-                <img src="{{"/images/references/partenaire_02.gif"| relative_url }}" alt=""  width="150px" />
-                <img src="{{"/images/references/partenaire_03.jpg"| relative_url }}" alt=""  width="150px" />
-                <img src="{{"/images/references/partenaire_04.png"| relative_url }}" alt=""  width="150px" />
-                <img src="{{"/images/references/partenaire_05.png"| relative_url }}" alt=""  width="150px" />
-                <img src="{{"/images/references/partenaire_06.jpg"| relative_url }}" alt=""  width="150px" />
-                <img src="{{"/images/references/partenaire_07.png"| relative_url }}" alt=""  width="150px" />
-                <img src="{{"/images/references/partenaire_08.png"| relative_url }}" alt=""  width="150px" />
-                <img src="{{"/images/references/partenaire_09.png"| relative_url }}" alt=""  width="150px" />
-                <img src="{{"/images/references/partenaire_10.png"| relative_url }}" alt=""  width="150px" />
-                <img src="{{"/images/references/partenaire_11.jpeg"| relative_url }}" alt="" width="100px" />
-                <img src="{{"/images/references/partenaire_12.png"| relative_url }}" alt=""  width="150px" />
-                <img src="{{"/images/references/partenaire_13.jpg"| relative_url }}" alt=""  width="150px" />
-                <img src="{{"/images/references/partenaire_14.png"| relative_url }}" alt=""  width="150px" />
-                <img src="{{"/images/references/partenaire_15.jpg"| relative_url }}" alt=""  width="150px" />
-                <img src="{{"/images/references/partenaire_16.jpg"| relative_url }}" alt=""  width="150px" />
-                <img src="{{"/images/references/partenaire_17.png"| relative_url }}" alt=""  width="100px" />
+<a href="https://www.arval.fr/" target="_blank">
+    <img src="{{"/images/references/client-arval.jpg"| relative_url }}" alt=""  width="150px" />
+</a>
+<a href="http://www.bpifrance.fr/" target="_blank">
+    <img src="{{"/images/references/client-bpifrance.gif"| relative_url }}" alt=""  width="150px" />
+</a>
+<a href="https://www.ald.softbankrobotics.com/fr" target="_blank">
+    <img src="{{"/images/references/client-softbank-robotics.jpg"| relative_url }}" alt=""  width="150px" />
+</a>
+<a href="http://www.menlook.com/fr/" target="_blank">
+    <img src="{{"/images/references/client-menlook.png"| relative_url }}" alt=""  width="150px" />
+</a>
+<a href="http://www.agirc-arrco.fr/" target="_blank">
+    <img src="{{"/images/references/client-girc-agirc-arrco.png"| relative_url }}" alt=""  width="150px" />
+</a>
+<a href="https://www.thalesgroup.com/fr" target="_blank">
+    <img src="{{"/images/references/client-thales.jpg"| relative_url }}" alt=""  width="150px" />
+</a>
+<a href="http://www.canalplus.fr/" target="_blank">
+    <img src="{{"/images/references/client-canal-plus.png"| relative_url }}" alt=""  width="150px" />
+</a>
+<a href="http://www.deolan.com/" target="_blank">
+    <img src="{{"/images/references/client-deolan.png"| relative_url }}" alt=""  width="150px" />
+</a>
+<a href="https://www.ingenico.com/fr" target="_blank">
+    <img src="{{"/images/references/client-ingenico.png"| relative_url }}" alt=""  width="150px" />
+</a>
+<a href="http://www.societegenerale.fr/" target="_blank">
+    <img src="{{"/images/references/client-societe-generale.png"| relative_url }}" alt=""  width="150px" />
+</a>
+<a href="https://www.cloudwatt.com/fr/" target="_blank">
+    <img src="{{"/images/references/client-orange.jpeg"| relative_url }}" alt="" width="100px" />
+</a>
+<a href="https://dtv.nagra.com/" target="_blank">
+    <img src="{{"/images/references/client-nagra-kudelski.png"| relative_url }}" alt=""  width="150px" />
+</a>
+<a href="http://www.michelin.fr/" target="_blank">
+    <img src="{{"/images/references/client-michelin.jpg"| relative_url }}" alt=""  width="150px" />
+</a>
+<a href="https://www.tennaxia.com/" target="_blank">
+    <img src="{{"/images/references/client-tennaxia.png"| relative_url }}" alt=""  width="150px" />
+</a>
+<a href="http://www.figaroclassifieds.fr/" target="_blank">
+    <img src="{{"/images/references/client-figaro-classifieds.jpg"| relative_url }}" alt=""  width="150px" />
+</a>
+<a href="https://www.parrot.com/fr" target="_blank">
+    <img src="{{"/images/references/client-parrot.jpg"| relative_url }}" alt=""  width="150px" />
+</a>
+<a href="http://www.senat.fr/" target="_blank">
+    <img src="{{"/images/references/client-senat.png"| relative_url }}" alt=""  width="100px" />
+</a>
               </div>
 <!--
 -->
